--- a/buat baru/classdetails.html
+++ b/buat baru/classdetails.html
@@ -107,11 +107,11 @@
                         <table>
                             <thead>
                                 <tr>
-                                    <td>Name</td>
                                     <td>Class Subject</td>
                                     <td>Class Time</td>
                                     <td>Class Day</td>
-                                    <td>Status</td>
+                                    <td>Class Link</td>
+                                    <td>Tutor Name</td>
                                 </tr>
                             </thead>
 
