--- a/buat baru/registersub.html
+++ b/buat baru/registersub.html
@@ -107,7 +107,7 @@
                 <div class="payment-details">
                     <div class="payment-proof">
                         <div class="cardHeader">
-                            <h2>Payment Proof</h2>
+                            <h2>Register Subject</h2>
                             
                         </div>
 
