--- a/buat baru/student.html
+++ b/buat baru/student.html
@@ -149,24 +149,21 @@
                 <div class="details">
                     <div class="recentOrders">
                         <div class="cardHeader">
-                            <h2>Recent Orders</h2>
-                            <a href="#" class="btn">View All</a>
+                            <h2>Class Timetable</h2>
                         </div>
 
                         <table>
                             <thead>
                                 <tr>
-                                    <td>Name</td>
-                                    <td>Price</td>
-                                    <td>Payment</td>
-                                    <td>Status</td>
+                                    <td>Time</td>
+                                    <td>Saturday</td>
+                                    <td>Sunday</td>
                                 </tr>
                             </thead>
 
                             <tbody>
                                 <tr>
-                                    <td>Star Refrigerator</td>
-                                    <td>$1200</td>
+                                    <td>8:00 a.m. - 9:00 a.m.</td>
                                     <td>Paid</td>
                                     <td>
                                         <span class="status delivered"
@@ -176,8 +173,7 @@
                                 </tr>
 
                                 <tr>
-                                    <td>Dell Laptop</td>
-                                    <td>$110</td>
+                                    <td>9:00 a.m. - 10:00 a.m.</td>
                                     <td>Due</td>
                                     <td>
                                         <span class="status pending"
@@ -187,8 +183,7 @@
                                 </tr>
 
                                 <tr>
-                                    <td>Apple Watch</td>
-                                    <td>$1200</td>
+                                    <td>1:00 p.m. - 2:00 p.m.</td>
                                     <td>Paid</td>
                                     <td>
                                         <span class="status return"
@@ -198,8 +193,7 @@
                                 </tr>
 
                                 <tr>
-                                    <td>Addidas Shoes</td>
-                                    <td>$620</td>
+                                    <td>2:00 p.m. - 3:00 p.m.</td>
                                     <td>Due</td>
                                     <td>
                                         <span class="status inProgress"
@@ -209,45 +203,11 @@
                                 </tr>
 
                                 <tr>
-                                    <td>Star Refrigerator</td>
-                                    <td>$1200</td>
+                                    <td>3:00 p.m. - 4:00 p.m.</td>
                                     <td>Paid</td>
                                     <td>
                                         <span class="status delivered"
                                             >Delivered</span
-                                        >
-                                    </td>
-                                </tr>
-
-                                <tr>
-                                    <td>Dell Laptop</td>
-                                    <td>$110</td>
-                                    <td>Due</td>
-                                    <td>
-                                        <span class="status pending"
-                                            >Pending</span
-                                        >
-                                    </td>
-                                </tr>
-
-                                <tr>
-                                    <td>Apple Watch</td>
-                                    <td>$1200</td>
-                                    <td>Paid</td>
-                                    <td>
-                                        <span class="status return"
-                                            >Return</span
-                                        >
-                                    </td>
-                                </tr>
-
-                                <tr>
-                                    <td>Addidas Shoes</td>
-                                    <td>$620</td>
-                                    <td>Due</td>
-                                    <td>
-                                        <span class="status inProgress"
-                                            >In Progress</span
                                         >
                                     </td>
                                 </tr>
