--- a/buat baru/studentdetails.html
+++ b/buat baru/studentdetails.html
@@ -51,7 +51,7 @@
                     </li>
 
                     <li>
-                        <a href="classdetail.html">
+                        <a href="classdetails.html">
                             <span class="icon">
                                 <ion-icon name="chatbubble-outline"></ion-icon>
                             </span>
@@ -100,78 +100,42 @@
                 <div class="class-details">
                     <div class="class">
                         <div class="cardHeader">
-                            <h2>Class Details</h2>
-                            <a href="#" class="btn">View All</a>
+                            <h2>User Details</h2>
+                            <a href="#" class="btn">Reset</a>
+                            <a href="#" class="btn">Save</a>
                         </div>
 
                         <table>
-                            <thead>
-                                <tr>
-                                    <td>Name</td>
-                                    <td>Phone Number</td>
-                                    <td>Email</td>
-                                    <td>Birthdate</td>
-                                    <td>Address</td>
-                                </tr>
-                            </thead>
+                            <tr>
+                                <td><b>Name</b></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
 
-                            <tbody>
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
+                            <tr>
+                                <td><b>Phone Number</b></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
 
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
+                            <tr>
+                                <td><b>Email</b></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
 
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
+                            <tr>
+                                <td><b>Birthdate</b></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
 
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
-
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
-
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
-
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
-
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
-                            </tbody>
+                            <tr>
+                                <td><b>Address</b></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
                         </table>
                     </div>
                 </div>
