dashboard php+stle

--- a/buat baru/studentdetails.html
+++ b/buat baru/studentdetails.html
@@ -108,32 +108,54 @@
                         <table>
                             <tr>
                                 <td><b>Name</b></td>
-                                <td></td>
+                                <td>
+                                    <!--    <?php echo "<h3>Name: " . $r['userName'] . "</h3>"; ?>      -->
+                                </td>
                                 <td></td>
                                 <td></td>
                             </tr>
 
                             <tr>
                                 <td><b>Phone Number</b></td>
-                                <td></td>
+                                <td>
+                                    <!--    <?php echo "<h3>Phone Number: " . $r['userPhone'] . "</h3>";    ?>      -->
+                                </td>
                                 <td></td>
                             </tr>
 
                             <tr>
                                 <td><b>Email</b></td>
-                                <td></td>
+                                <td>
+                                    <!--    <?php echo "<h3>Email: " . $r['userEmail'] . "</h3>";   ?>      -->
+                                </td>
                                 <td></td>
                             </tr>
 
                             <tr>
                                 <td><b>Birthdate</b></td>
+                                <td>
+                                    <!--    <?php echo "<h3>Birthdate: " . $r['userBirthdate'] . "</h3>";   ?>       -->
+                                </td>
                                 <td></td>
+                            </tr>
+
+                            <tr>
+                                <td><b>Gender</b></td>
+                                <td>
+                                    <!--    <?php   if ($r['userGender'] == 1) // 1 == Male, 2 == Female
+                                                        $gender = "Male";
+                                                    else if ($r['userGender'] == 2)
+                                                        $gender = "Female";
+                                                    echo "<h3>Gender: " . $gender . "</h3>";   ?>       -->
+                                </td>
                                 <td></td>
                             </tr>
 
                             <tr>
                                 <td><b>Address</b></td>
-                                <td></td>
+                                <td>
+                                    <!--    <?php echo "<h3>Address: " . $r['userAddress'] . "</h3>";   ?>       -->
+                                </td>
                                 <td></td>
                             </tr>
                         </table>
