--- a/php/register.html
+++ b/php/register.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Smart E-Tuition Register Page</title>
         <!-- CSS -->
-        <link rel="stylesheet" href="style2.css" />
+        <link rel="stylesheet" href="../css/style.css" />
         <!-- Iconscout CSS -->
         <link
             rel="stylesheet"
