Update icon animations!

--- a/home.html
+++ b/home.html
@@ -19,16 +19,50 @@
     <body>
         <!-- header section starts  -->
         <header class="header">
+            <script src="https://cdn.lordicon.com/xdjxvujz.js"></script>
+
             <a href="index.html" class="logo">
                 <!-- <img src="images/logo.png" width="50"></img> -->
-                Let Us Score!
+                <lord-icon
+                    src="https://cdn.lordicon.com/stxtcyyo.json"
+                    trigger="loop"
+                    colors="primary:#fff"
+                    state="loop"
+                    style="width: 40px; height: 40px"
+                >
+                </lord-icon>
+                ‎ ‎ ‎ Let Us Score!
             </a>
             <div id="menu-btn" class="fas fa-bars"></div>
             <nav class="navbar">
                 <ul>
-                    <li><a href="home.html">Home</a></li>
                     <li>
-                        <a href="#">About +</a>
+                        <a href="home.html"
+                            ><script src="https://cdn.lordicon.com/xdjxvujz.js"></script>
+                            <lord-icon
+                                src="https://cdn.lordicon.com/igpbsrza.json"
+                                trigger="hover"
+                                colors="primary:#fff"
+                                state="morph-2"
+                                style="width: 25px; height: 25px"
+                            >
+                            </lord-icon>
+                            Home
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <script src="https://cdn.lordicon.com/xdjxvujz.js"></script>
+                            <lord-icon
+                                src="https://cdn.lordicon.com/vmibgbhr.json"
+                                trigger="hover"
+                                colors="primary:#fff"
+                                state="hover"
+                                style="width: 25px; height: 25px"
+                            >
+                            </lord-icon>
+                            About +
+                        </a>
                         <ul>
                             <li>
                                 <a href="aboutteam.html">The Team</a>
@@ -39,7 +73,17 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#">Courses +</a>
+                        <a href="#">
+                            <script src="https://cdn.lordicon.com/xdjxvujz.js"></script>
+                            <lord-icon
+                                src="https://cdn.lordicon.com/aslgozpd.json"
+                                trigger="hover"
+                                colors="primary:#fff"
+                                style="width: 25px; height: 25px"
+                            >
+                            </lord-icon>
+                            Courses +
+                        </a>
                         <ul>
                             <li>
                                 <a href="subjects/maths.html">Mathematics</a>
@@ -62,7 +106,20 @@
                             </li>
                         </ul>
                     </li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li>
+                        <a href="contact.html">
+                            <script src="https://cdn.lordicon.com/xdjxvujz.js"></script>
+                            <lord-icon
+                                src="https://cdn.lordicon.com/cnyeuzxc.json"
+                                trigger="hover"
+                                colors="primary:#fff"
+                                state="morph-phone-signal-start"
+                                style="width: 25px; height: 25px"
+                            >
+                            </lord-icon>
+                            Contact
+                        </a>
+                    </li>
                 </ul>
             </nav>
         </header>
@@ -94,6 +151,18 @@
                     - Nelson Mandela
                 </p>
                 <a href="php/register.html" class="btn">Register</a>
+                <script src="https://cdn.lordicon.com/xdjxvujz.js"></script>
+                <lord-icon
+                    src="https://cdn.lordicon.com/qvzrpodt.json"
+                    trigger="loop"
+                    delay="500"
+                    colors="primary:#f9dc5e,secondary:#ed2146"
+                    stroke="70"
+                    style="width: 70px; height: 70px"
+                >
+                </lord-icon>
+                <!-- Blank Character -->
+                ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎
                 <a href="php/login.php" class="btn">Login</a>
             </div>
         </section>
