--- a/php/register.html
+++ b/php/register.html
@@ -109,8 +109,16 @@
                 </div>
                 <div class="buttons">
                     <button type="submit" name="registerButton" value="Submit">
-                        <span class="btnText"> Register </span>
-                        <i class="uil uil-navigator"></i>
+                        <span class="btnText"> Register ‎ ‎ ‎</span>
+                        <script src="https://cdn.lordicon.com/xdjxvujz.js"></script>
+                        <lord-icon
+                            src="https://cdn.lordicon.com/iifryyua.json"
+                            trigger="loop"
+                            colors="primary:#ffffff"
+                            state="hover-3"
+                            style="width: 32px; height: 32px"
+                        >
+                        </lord-icon>
                     </button>
                 </div>
             </form>
