Updated animation icons

--- a/home.html
+++ b/home.html
@@ -41,10 +41,11 @@
                             ><script src="https://cdn.lordicon.com/xdjxvujz.js"></script>
                             <lord-icon
                                 src="https://cdn.lordicon.com/igpbsrza.json"
-                                trigger="hover"
+                                trigger="loop"
+                                delay="2500"
                                 colors="primary:#fff"
                                 state="morph-2"
-                                style="width: 25px; height: 25px"
+                                style="width: 28px; height: 28px"
                             >
                             </lord-icon>
                             Home
@@ -55,10 +56,11 @@
                             <script src="https://cdn.lordicon.com/xdjxvujz.js"></script>
                             <lord-icon
                                 src="https://cdn.lordicon.com/vmibgbhr.json"
-                                trigger="hover"
+                                trigger="loop"
+                                delay="2500"
                                 colors="primary:#fff"
                                 state="hover"
-                                style="width: 25px; height: 25px"
+                                style="width: 28px; height: 28px"
                             >
                             </lord-icon>
                             About +
@@ -77,9 +79,10 @@
                             <script src="https://cdn.lordicon.com/xdjxvujz.js"></script>
                             <lord-icon
                                 src="https://cdn.lordicon.com/aslgozpd.json"
-                                trigger="hover"
+                                trigger="loop"
+                                delay="2500"
                                 colors="primary:#fff"
-                                style="width: 25px; height: 25px"
+                                style="width: 28px; height: 28px"
                             >
                             </lord-icon>
                             Courses +
@@ -111,10 +114,11 @@
                             <script src="https://cdn.lordicon.com/xdjxvujz.js"></script>
                             <lord-icon
                                 src="https://cdn.lordicon.com/cnyeuzxc.json"
-                                trigger="hover"
+                                trigger="loop"
+                                delay="2500"
                                 colors="primary:#fff"
                                 state="morph-phone-signal-start"
-                                style="width: 25px; height: 25px"
+                                style="width: 28px; height: 28px"
                             >
                             </lord-icon>
                             Contact
@@ -151,6 +155,7 @@
                     - Nelson Mandela
                 </p>
                 <a href="php/register.html" class="btn">Register</a>
+                <!--
                 <script src="https://cdn.lordicon.com/xdjxvujz.js"></script>
                 <lord-icon
                     src="https://cdn.lordicon.com/qvzrpodt.json"
@@ -161,8 +166,7 @@
                     style="width: 70px; height: 70px"
                 >
                 </lord-icon>
-                <!-- Blank Character -->
-                ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎
+                -->
                 <a href="php/login.php" class="btn">Login</a>
             </div>
         </section>
