Added logo on page title

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!-- Title-->
         <title>Smart E-Tuition Information</title>
         <!-- Logo beside title -->
-        <link rel="icon" href="images/favicon.ico" />
+        <link rel="icon" href="../images/icon.ico" />
     </head>
     <body>
         <!-- JS File -->
