--- a/php/register.html
+++ b/php/register.html
@@ -4,7 +4,10 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Smart E-Tuition Register Page</title>
+        <!-- Image beside title -->
+        <link rel="icon" href="../images/icon.ico" />
+
+        <title>Registration Page</title>
         <!-- CSS -->
         <link rel="stylesheet" href="../css/style.css" />
         <!-- Iconscout CSS -->
@@ -13,6 +16,7 @@
             href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
         />
     </head>
+
     <body id="register">
         <div class="logoImage">
             <a href="../home.html">
