Lots of changes and fixes.

--- a/home.html
+++ b/home.html
@@ -154,7 +154,7 @@
                     </cite>
                     - Nelson Mandela
                 </p>
-                <a href="php/register.html" class="btn">Register</a>
+                <a href="php/register.php" class="btn">Register</a>
                 <!--
                 <script src="https://cdn.lordicon.com/xdjxvujz.js"></script>
                 <lord-icon
