--- a/subjects/physics.html
+++ b/subjects/physics.html
@@ -13,23 +13,58 @@
         <!-- . means "current directory" & .. means "parent directory"-->
         <link rel="stylesheet" href="../css/style.css" />
         <!-- Title-->
-        <title>Smart E-Tuition Information</title>
-        <!-- Image beside title -->
+        <title>Physics</title>
         <link rel="icon" href="../images/icon.ico" />
     </head>
     <body>
-        <!-- Header starts  -->
+        <!-- Header  -->
         <header class="header">
-            <a href="../index.html" class="logo">
+            <script src="https://cdn.lordicon.com/xdjxvujz.js"></script>
+
+            <a href="./index.html" class="logo">
                 <!-- <img src="images/logo.png" width="50"></img> -->
-                Let Us Score!
+                <lord-icon
+                    src="https://cdn.lordicon.com/stxtcyyo.json"
+                    trigger="loop"
+                    colors="primary:#fff"
+                    state="loop"
+                    style="width: 40px; height: 40px"
+                >
+                </lord-icon>
+                ‎ ‎ ‎ Let Us Score!
             </a>
             <div id="menu-btn" class="fas fa-bars"></div>
             <nav class="navbar">
                 <ul>
-                    <li><a href="../home.html">Home</a></li>
                     <li>
-                        <a href="#">About +</a>
+                        <a href="../home.html"
+                            ><script src="https://cdn.lordicon.com/xdjxvujz.js"></script>
+                            <lord-icon
+                                src="https://cdn.lordicon.com/igpbsrza.json"
+                                trigger="loop"
+                                delay="2500"
+                                colors="primary:#fff"
+                                state="morph-2"
+                                style="width: 28px; height: 28px"
+                            >
+                            </lord-icon>
+                            Home
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <script src="https://cdn.lordicon.com/xdjxvujz.js"></script>
+                            <lord-icon
+                                src="https://cdn.lordicon.com/vmibgbhr.json"
+                                trigger="loop"
+                                delay="2500"
+                                colors="primary:#fff"
+                                state="hover"
+                                style="width: 28px; height: 28px"
+                            >
+                            </lord-icon>
+                            About +
+                        </a>
                         <ul>
                             <li>
                                 <a href="../aboutteam.html">The Team</a>
@@ -40,7 +75,18 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#">Courses +</a>
+                        <a href="#">
+                            <script src="https://cdn.lordicon.com/xdjxvujz.js"></script>
+                            <lord-icon
+                                src="https://cdn.lordicon.com/aslgozpd.json"
+                                trigger="loop"
+                                delay="2500"
+                                colors="primary:#fff"
+                                style="width: 28px; height: 28px"
+                            >
+                            </lord-icon>
+                            Courses +
+                        </a>
                         <ul>
                             <li>
                                 <a href="maths.html">Mathematics</a>
@@ -59,186 +105,120 @@
                             </li>
                         </ul>
                     </li>
-                    <li><a href="../contact.html">Contact</a></li>
+                    <li>
+                        <a href="../contact.html">
+                            <script src="https://cdn.lordicon.com/xdjxvujz.js"></script>
+                            <lord-icon
+                                src="https://cdn.lordicon.com/cnyeuzxc.json"
+                                trigger="loop"
+                                delay="2500"
+                                colors="primary:#fff"
+                                state="morph-phone-signal-start"
+                                style="width: 28px; height: 28px"
+                            >
+                            </lord-icon>
+                            Contact
+                        </a>
+                    </li>
                 </ul>
             </nav>
         </header>
-        <!-- header section ends -->
+
+        <!-- Main -->
         <section class="heading">
             <h3>Physics</h3>
             <p><a href="../home.html">home >></a> physics</p>
         </section>
 
-        <!-- course-3 section starts  -->
-
-        <section class="course-3">
+        <section class="course-1">
             <div class="box">
-                <div class="video">
-                    <i class="fas fa-play"></i>
-                    <video src="images/course-vid-1.mp4"></video>
-                </div>
-                <div class="content">
-                    <h3>introduction to design</h3>
-                    <p>by john deo</p>
-                </div>
+                <!--
+                <img src="images/course-1.png" alt="" />
+                -->
+                <h3>Form 4 (6 Chapters)</h3>
+                <p>
+                    <b>
+                        <mark>
+                            Introduction to Physics <br />
+                            Force and Motion I <br />
+                            Gravitation <br />
+                            Heat <br />
+                            Waves <br />
+                            Light and Optics <br />
+                        </mark>
+                        <br />
+                    </b>
+                </p>
+                <!--
+                <a href="#" class="btn">read more</a>
+                -->
             </div>
 
             <div class="box">
-                <div class="video">
-                    <i class="fas fa-play"></i>
-                    <video src="images/course-vid-2.mp4"></video>
-                </div>
-                <div class="content">
-                    <h3>introduction to design</h3>
-                    <p>by john deo</p>
-                </div>
-            </div>
-
-            <div class="box">
-                <div class="video">
-                    <i class="fas fa-play"></i>
-                    <video src="images/course-vid-3.mp4"></video>
-                </div>
-                <div class="content">
-                    <h3>introduction to design</h3>
-                    <p>by john deo</p>
-                </div>
-            </div>
-
-            <div class="box">
-                <div class="video">
-                    <i class="fas fa-play"></i>
-                    <video src="images/course-vid-4.mp4"></video>
-                </div>
-                <div class="content">
-                    <h3>introduction to design</h3>
-                    <p>by john deo</p>
-                </div>
-            </div>
-
-            <div class="box">
-                <div class="video">
-                    <i class="fas fa-play"></i>
-                    <video src="images/course-vid-5.mp4"></video>
-                </div>
-                <div class="content">
-                    <h3>introduction to design</h3>
-                    <p>by john deo</p>
-                </div>
-            </div>
-
-            <div class="box">
-                <div class="video">
-                    <i class="fas fa-play"></i>
-                    <video src="images/course-vid-6.mp4"></video>
-                </div>
-                <div class="content">
-                    <h3>introduction to design</h3>
-                    <p>by john deo</p>
-                </div>
+                <h3>Form 5 (7 Chapters)</h3>
+                <p>
+                    <b>
+                        <mark>
+                            Force and Motion II <br />
+                            Pressure <br />
+                            Electricity <br />
+                            Electromagnetism <br />
+                            Electronics <br />
+                            Nuclear Physics <br />
+                            Quantum Physics <br />
+                        </mark>
+                    </b>
+                </p>
             </div>
         </section>
 
-        <!-- course-3 section ends -->
-
-        <div class="main-video">
-            <div id="close-vid" class="fas fa-times"></div>
-            <video src="" autoplay controls muted></video>
-        </div>
-
-        <!-- footer section starts  -->
-
+        <!-- Footer section  -->
         <section class="footer">
             <div class="box-container">
                 <div class="box">
-                    <h3>explore</h3>
-                    <a href="home.html">
-                        <i class="fas fa-arrow-right"></i> home
-                    </a>
-                    <a href="about.html">
-                        <i class="fas fa-arrow-right"></i> about
-                    </a>
-                    <a href="course-1.html">
-                        <i class="fas fa-arrow-right"></i> course-1
-                    </a>
-                    <a href="course-2.html">
-                        <i class="fas fa-arrow-right"></i>course-2
-                    </a>
-                    <a href="course-3.html">
-                        <i class="fas fa-arrow-right"></i> course-3
-                    </a>
-                    <a href="teachers.html">
-                        <i class="fas fa-arrow-right"></i> teachers
-                    </a>
-                    <a href="blog.html">
-                        <i class="fas fa-arrow-right"></i> blog
-                    </a>
-                    <a href="contact.html">
-                        <i class="fas fa-arrow-right"></i> contact
-                    </a>
-                </div>
-
-                <div class="box">
-                    <h3>categories</h3>
-                    <a href="#">
-                        <i class="fas fa-arrow-right"></i> web design
-                    </a>
-                    <a href="#">
-                        <i class="fas fa-arrow-right"></i> graphic design</a
-                    >
-                    <a href="#">
-                        <i class="fas fa-arrow-right"></i> UI / UX design</a
-                    >
-                    <a href="#">
-                        <i class="fas fa-arrow-right"></i> seo marketing</a
-                    >
-                    <a href="#">
-                        <i class="fas fa-arrow-right"></i> digital marketing</a
-                    >
-                    <a href="#">
-                        <i class="fas fa-arrow-right"></i> email marketing</a
-                    >
-                    <a href="#">
-                        <i class="fas fa-arrow-right"></i> all courses</a
-                    >
-                </div>
-
-                <div class="box">
-                    <h3>quick links</h3>
-                    <a href="#">
-                        <i class="fas fa-arrow-right"></i> my account
-                    </a>
-                    <a href="#">
-                        <i class="fas fa-arrow-right"></i> feedback
-                    </a>
-                    <a href="#">
-                        <i class="fas fa-arrow-right"></i> help center
-                    </a>
-                    <a href="#">
-                        <i class="fas fa-arrow-right"></i> certificates
-                    </a>
-                    <a href="#">
-                        <i class="fas fa-arrow-right"></i> newsletter
-                    </a>
-                </div>
-
-                <div class="box">
-                    <h3>follow us</h3>
-                    <a href="#"> <i class="fab fa-facebook-f"></i> facebook </a>
-                    <a href="#"> <i class="fab fa-twitter"></i> twitter </a>
-                    <a href="#"> <i class="fab fa-linkedin"></i> linkedin </a>
-                    <a href="#"> <i class="fab fa-instagram"></i> instagram </a>
-                    <a href="#"> <i class="fab fa-pinterest"></i> pinterest </a>
-                    <a href="#"> <i class="fab fa-github"></i> github </a>
+                    <h3>Follow Us!</h3>
+                    <ul>
+                        <li>
+                            <a href="#">
+                                <i class="fab fa-facebook" aria-hidden="true">
+                                </i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fab fa-twitter" aria-hidden="true">
+                                </i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i
+                                    class="fab fa-google-plus-g"
+                                    aria-hidden="true"
+                                >
+                                </i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fab fa-linkedin" aria-hidden="true">
+                                </i
+                            ></a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fab fa-instagram" aria-hidden="true">
+                                </i>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
-
+            <br /><br />
             <div class="credit">
                 TM & Copyright 2022 Let Us Score! All rights reserved.
             </div>
         </section>
-
-        <!-- footer section ends -->
 
         <!-- custom js file link  -->
         <script src="../js/script.js"></script>
