--- a/aboutteam.html
+++ b/aboutteam.html
@@ -86,7 +86,7 @@
                                 style="width: 28px; height: 28px"
                             >
                             </lord-icon>
-                            Courses +
+                            Subjects +
                         </a>
                         <ul>
                             <li>
