--- a/contact.html
+++ b/contact.html
@@ -149,7 +149,7 @@
                         ><i class="fas fa-envelope"></i
                     ></a>
                     <h3>Our Email</h3>
-                    <p>letusscore@gmail.com</p>
+                    <p>smartetuition@gmail.com</p>
                 </div>
 
                 <div class="icons">
