--- a/subjects/addmaths.html
+++ b/subjects/addmaths.html
@@ -126,7 +126,7 @@
 
         <!-- Main -->
         <section class="heading">
-            <h3>Add. Mathematics</h3>
+            <h3>SPM Add. Mathematics</h3>
             <p><a href="../home.html">home >></a> add. mathematics</p>
         </section>
 
