--- a/subjects/chemistry.html
+++ b/subjects/chemistry.html
@@ -126,7 +126,7 @@
 
         <!-- Main -->
         <section class="heading">
-            <h3>Chemistry</h3>
+            <h3>SPM Chemistry</h3>
             <p><a href="../home.html">home >></a> chemistry</p>
         </section>
 
