--- a/subjects/maths.html
+++ b/subjects/maths.html
@@ -126,7 +126,7 @@
 
         <!-- Main -->
         <section class="heading">
-            <h3>Mathematics</h3>
+            <h3>SPM Mathematics</h3>
             <p><a href="../home.html">home >></a> mathematics</p>
         </section>
 
