--- a/subjects/physics.html
+++ b/subjects/physics.html
@@ -126,7 +126,7 @@
 
         <!-- Main -->
         <section class="heading">
-            <h3>Physics</h3>
+            <h3>SPM Physics</h3>
             <p><a href="../home.html">home >></a> physics</p>
         </section>
 
