--- a/aboutteam.html
+++ b/aboutteam.html
@@ -138,6 +138,22 @@
         <section class="team">
             <div class="box">
                 <div class="imageTeam">
+                    <img src="images/PicDib.jpeg" alt="Adib" />
+                    <div class="share">
+                        <a href="#" class="fab fa-facebook-f"></a>
+                        <a href="#" class="fab fa-twitter"></a>
+                        <a href="#" class="fab fa-instagram"></a>
+                        <a href="#" class="fab fa-linkedin"></a>
+                    </div>
+                </div>
+                <div class="contentTeam">
+                    <h3>Adib Asyraaf</h3>
+                    <span>Chief Executive Officer</span>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="imageTeam">
                     <img src="images/PicKhai.jpg" alt="Khairul" />
                     <div class="share">
                         <a href="#" class="fab fa-facebook-f"></a>
@@ -148,7 +164,7 @@
                 </div>
                 <div class="contentTeam">
                     <h3>Khairul Haziq</h3>
-                    <span>Member 1</span>
+                    <span>Full Stack Developer</span>
                 </div>
             </div>
 
@@ -164,23 +180,7 @@
                 </div>
                 <div class="contentTeam">
                     <h3>Harith Iqbal</h3>
-                    <span>Member 2</span>
-                </div>
-            </div>
-
-            <div class="box">
-                <div class="imageTeam">
-                    <img src="images/PicDib.jpeg" alt="Adib" />
-                    <div class="share">
-                        <a href="#" class="fab fa-facebook-f"></a>
-                        <a href="#" class="fab fa-twitter"></a>
-                        <a href="#" class="fab fa-instagram"></a>
-                        <a href="#" class="fab fa-linkedin"></a>
-                    </div>
-                </div>
-                <div class="contentTeam">
-                    <h3>Adib Asyraaf</h3>
-                    <span>Member 3</span>
+                    <span>Mobile Application Developer</span>
                 </div>
             </div>
 
@@ -196,7 +196,7 @@
                 </div>
                 <div class="contentTeam">
                     <h3>Syahril Rumizam</h3>
-                    <span>Member 4</span>
+                    <span>Database Designer</span>
                 </div>
             </div>
         </section>
