--- a/aboutteam.html
+++ b/aboutteam.html
@@ -148,7 +148,7 @@
                 </div>
                 <div class="contentTeam">
                     <h3>Adib Asyraaf</h3>
-                    <span>Chief Executive Officer</span>
+                    <span>Project Leader</span>
                 </div>
             </div>
 
