Hyperlink and title updated

--- a/abouttutor.html
+++ b/abouttutor.html
@@ -71,7 +71,7 @@
                                 <a href="aboutteam.html">The Team</a>
                             </li>
                             <li>
-                                <a href="abouttutor.html">The Teachers</a>
+                                <a href="abouttutor.html">The Tutors</a>
                             </li>
                         </ul>
                     </li>
@@ -237,7 +237,7 @@
                     </cite>
                     - Malala Yousafzai
                 </p>
-                <a href="php/register.html" class="btn">Register Now!</a>
+                <a href="php/register.php" class="btn">Register Now!</a>
             </div>
         </section>
 
