Hyperlink and title updated

--- a/home.html
+++ b/home.html
@@ -70,7 +70,7 @@
                                 <a href="aboutteam.html">The Team</a>
                             </li>
                             <li>
-                                <a href="abouttutor.html">The Teachers</a>
+                                <a href="abouttutor.html">The Tutors</a>
                             </li>
                         </ul>
                     </li>
