--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
                                 <a href="aboutteam.html">The Team</a>
                             </li>
                             <li>
-                                <a href="abouttutor.html">The Teachers</a>
+                                <a href="abouttutor.html">The Tutors</a>
                             </li>
                         </ul>
                     </li>
